# qlc-svn

./: ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  coverage.pri  coverage.sh  create-deb.sh  create-rpm.sh  i18n.pri  qlc.pro  unittest.bat  unittest.sh  variables.pri
dce/: Makefile.am
dce/src/: aboutbox.cpp  app.cpp  app.h  deviceclasseditor.cpp  deviceclasseditor.h  deviceclasseditor.ui  editcapability.h  editcapability.ui  editchannel.cpp  editchannel.h  editchannel.ui  editmode.cpp  editmode.h  editmode.ui  editpresetvalue.cpp  editpresetvalue.h  editpresetvalue.ui  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.ui  main.cpp
devices/: Antari-Z-1200.deviceclass  Botex-DPX420.deviceclass  Botex-DPX620.deviceclass  Botex-T-4.deviceclass  Botex-T-6.deviceclass  Elation-Color-Spot-150.deviceclass  Elation-Vision-250.deviceclass  Eurolite-LED-PAR56.deviceclass  Futurelight-AHS-150.deviceclass  Futurelight-CF-200.deviceclass  Futurelight-CY-200.deviceclass  Futurelight-CY-250.deviceclass  Futurelight-DJ-Color200.deviceclass  Futurelight-DJScan200.deviceclass  Futurelight-DJScan250.deviceclass  Futurelight-EVO-5.deviceclass  Futurelight-EVO-7.deviceclass  Futurelight-EYE-18.deviceclass  Futurelight-EYE-36.deviceclass  Futurelight-MCF-200.deviceclass  Futurelight-MH-440.deviceclass  Futurelight-MH-840.deviceclass  Futurelight-PCC-1200.deviceclass  Futurelight-PCC-250.deviceclass  Futurelight-PCC-250CMY.deviceclass  Futurelight-PFE-1200.deviceclass  Futurelight-PHS-150.deviceclass  Futurelight-PHS-200.deviceclass  Futurelight-PHS-220.deviceclass  Futurelight-PHS-250.deviceclass  Futurelight-PHS-700.deviceclass  Futurelight-PHW-250.deviceclass  Futurelight-PHW-700.deviceclass  Futurelight-PSC-1200.deviceclass  Futurelight-PSC-250.deviceclass  Futurelight-PSC-575.deviceclass  Futurelight-XF-200.deviceclass  GLP-DP-106.deviceclass  GLP-DP-56.deviceclass  GLP-Junior-Scan-1.deviceclass  (+40 more)
docs/: Makefile.am  QLC.xmi  SWRequirements.sxw  addeditfixtures.html  addvcbuttonmatrix.html  advancedsceneeditor-pic.html  advancedsceneeditor.html  busmanager.html  busproperties-pic.html  busproperties.html  capabilityeditor.html  capabilitywizard.html  channeleditor.html  chasereditor.html  coding-convention.html  collectioneditor.html  commandlineparameters.html  compiling.html  concept.html  console-pic.html  console.html  deviceclasseditor-pic.html  deviceclasseditor.html  devicemanager-pic.html  devicemanager.html  docs.pro  efxeditor.html  errata.html  faq.html  fileformat.txt  fixturedefinitioneditor.html  fixtureeditor.html  fixturemanager.html  fixturemonitor.html  functionmanager-pic.html  functionmanager.html  functionwizard.html  getting-started.html  howto-add-fixtures.html  howto-input-devices.html  (+29 more)
fixtureeditor/: Makefile.am  aboutbox.cpp  aboutbox.h  aboutbox.ui  app.cpp  app.h  capabilitywizard.cpp  capabilitywizard.h  editcapability.cpp  editcapability.h  editchannel.cpp  editchannel.h  editchannel.ui  editmode.cpp  editmode.h  editmode.ui  fixtureeditor-i18n.pri  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.pro  fixtureeditor.qrc  fixtureeditor.rc  fixtureeditor.ui  fixtureeditor_de_DE.ts  fixtureeditor_es_ES.ts  fixtureeditor_fi_FI.ts  fixtureeditor_fr_FR.ts  libupdate.sh  main.cpp
fixtureeditor/src/: aboutbox.cpp  app.cpp  app.h  editcapability.cpp  editchannel.cpp  editmode.h  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.ui  main.cpp
fixtures/: American-DJ-DJ-Spot-300.qxf  American-DJ-Mega-Bar-LED.qxf  American-DJ-Vizi-LED-Spot.qxf  Chauvet-200b.qxf  Chauvet-LEDSplash-Jr.qxf  Chauvet-Vue-6.1.qxf  Elation-Color-Spot-150.qxf  Elation-Vision-250.qxf  Eurolite-DMXSuperstrobe-2700.qxf  Eurolite-KLS200.qxf  Eurolite-LED-PAR56.qxf  Eurolite-LED-PAR64-RGB.qxf  Eurolite-TC-150.qxf  Eurolite-TC-200.qxf  Eurolite-TC-250.qxf  Eurolite-TC-300.qxf  Eurolite-TC-5.qxf  Eurolite-TF-5.qxf  Eurolite-TG-5.qxf  Eurolite-TMH-155.qxf  Eurolite-TMH-250.qxf  Eurolite-TR-5.qxf  Eurolite-TS-10.qxf  Eurolite-TS-150.qxf  Eurolite-TS-155.qxf  Eurolite-TS-2.qxf  Eurolite-TS-250.qxf  Eurolite-TS-255.qxf  Eurolite-TS-5.qxf  Eurolite-TS-7.qxf  Eurolite-TS-7B.qxf  Futurelight-AHS-150.qxf  Futurelight-CF-200.qxf  Futurelight-CY-200.qxf  Futurelight-CY-250.qxf  Futurelight-DJ-Color200.qxf  Futurelight-DJ-LEDScan100.qxf  Futurelight-DJScan200.qxf  Futurelight-DJScan250.qxf  Futurelight-EVO-5.qxf  (+93 more)
libs/common/: Makefile.am  capability.cpp  capability.h  common.pro  common.qrc  configitem.h  deviceclass.cpp  deviceclass.h  documentbrowser.cpp  documentbrowser.h  filehandler.cpp  filehandler.h  inputplugin.cpp  inputplugin.h  ledbar.cpp  ledbar.h  logicalchannel.cpp  logicalchannel.h  minmax.h  outputplugin.cpp  outputplugin.h  plugin.cpp  plugin.h  qlccapability.cpp  qlccapability.h  qlcchannel.cpp  qlcchannel.h  qlcdocbrowser.cpp  qlcdocbrowser.h  qlcfile.cpp  qlcfile.h  qlcfixture.cpp  qlcfixture.h  qlcfixturedef.cpp  qlcfixturedef.h  qlcfixturedefcache.cpp  qlcfixturedefcache.h  qlcfixturemode.cpp  qlcfixturemode.h  qlci18n.cpp  (+20 more)
libs/dmx4linuxout/: Makefile.am  configuredmx4linuxout.cpp  configuredmx4linuxout.h  configuredmx4linuxout.ui  dmx4linuxout.cpp  dmx4linuxout.h  dmx4linuxout.pro
libs/hidinput/: Makefile.am  configurehidinput.cpp  configurehidinput.h  configurehidinput.ui  hiddevice.cpp  hiddevice.h  hideventdevice.cpp  hideventdevice.h  hidinput.cpp  hidinput.h  hidinput.pro  hidjsdevice.cpp  hidjsdevice.h  hidpoller.cpp  hidpoller.h
main/: Info.plist  Makefile.am  aboutbox.cpp  aboutbox.h  aboutbox.ui  addfixture.cpp  addfixture.h  addfixture.ui  app.cpp  app.h  appdirectories.cpp  appdirectories.h  appdirectories.ui  assignhotkey.cpp  assignhotkey.h  breakoutwindow.cpp  breakoutwindow.h  bus.cpp  bus.h  busmanager.cpp  busmanager.h  busmanager.ui  busproperties.cpp  busproperties.h  busproperties.ui  chaser.cpp  chaser.h  chasereditor.cpp  chasereditor.h  chasereditor.ui  collection.cpp  collection.h  collectioneditor.cpp  collectioneditor.h  collectioneditor.ui  consolechannel.cpp  consolechannel.h  cue.cpp  cue.h  dmxaddresstool.cpp  (+156 more)
xpm/: Makefile.am
(+1198 files in other folders)
