fixturesdir = $(datadir)/$(FIXTURES)

dist_fixtures_DATA = \
	Antari-Z-1200.deviceclass \
	Botex-DPX420.deviceclass \
	Botex-DPX620.deviceclass \
	Botex-T-4.deviceclass \
	Botex-T-6.deviceclass \
	Elation-Color-Spot-150.deviceclass \
	Elation-Vision-250.deviceclass \
	Futurelight-AHS-150.deviceclass \
	Futurelight-CF-200.deviceclass \
	Futurelight-CY-200.deviceclass \
	Futurelight-CY-250.deviceclass \
	Futurelight-DJ-Color200.deviceclass \
	Futurelight-DJScan200.deviceclass \
	Futurelight-DJScan250.deviceclass \
	Futurelight-EVO-5.deviceclass \
	Futurelight-EVO-7.deviceclass \
	Futurelight-EYE-18.deviceclass \
	Futurelight-EYE-36.deviceclass \
	Futurelight-MCF-200.deviceclass \
	Futurelight-MH-440.deviceclass \
	Futurelight-MH-840.deviceclass \
	Futurelight-PCC-1200.deviceclass \
	Futurelight-PCC-250CMY.deviceclass \
	Futurelight-PCC-250.deviceclass \
	Futurelight-PFE-1200.deviceclass \
	Futurelight-PHS-150.deviceclass \
	Futurelight-PHS-200.deviceclass \
	Futurelight-PHS-220.deviceclass \
	Futurelight-PHS-250.deviceclass \
	Futurelight-PHS-700.deviceclass \
	Futurelight-PHW-250.deviceclass \
	Futurelight-PHW-700.deviceclass \
	Futurelight-PSC-1200.deviceclass \
	Futurelight-PSC-250.deviceclass \
	Futurelight-PSC-575.deviceclass \
	Futurelight-XF-200.deviceclass \
	GLP-DP-106.deviceclass \
	GLP-DP-56.deviceclass \
	GLP-Junior-Scan-1.deviceclass \
	GLP-Junior-Scan-2.deviceclass \
	GLP-MDP-1012.deviceclass \
	GLP-PocketScan.deviceclass \
	JB-Varyscan2.deviceclass \
	Lite-Works-ColorChanger.deviceclass \
	Martin-MAC250+-Mode-1.deviceclass \
	Martin-MAC250+-Mode-2.deviceclass \
	Martin-MAC250+-Mode-3.deviceclass \
	Martin-MAC250+-Mode-4.deviceclass \
	Martin-MiniMAC-Maestro-Mode-1.deviceclass \
	Martin-MiniMAC-Maestro-Mode-2.deviceclass \
	Martin-MiniMAC-Maestro-Mode-3.deviceclass \
	Martin-MiniMAC-Maestro-Mode-4.deviceclass \
	Martin-MiniMAC-Profile-Mode-1.deviceclass \
	Martin-MiniMAC-Profile-Mode-2.deviceclass \
	Martin-MiniMAC-Profile-Mode-3.deviceclass \
	Martin-MiniMAC-Profile-Mode-4.deviceclass \
	Martin-MiniMAC-Wash-Mode-1.deviceclass \
	Martin-MiniMAC-Wash-Mode-2.deviceclass \
	Martin-MiniMAC-Wash-Mode-3.deviceclass \
	Martin-MiniMAC-Wash-Mode-4.deviceclass \
	Martin-MX-10.deviceclass \
	Martin-MX-1.deviceclass \
	Martin-MX-4.deviceclass \
	Martin-Roboscan-518-Mode-1.deviceclass \
	Martin-Roboscan-518-Mode-2.deviceclass \
	Martin-Roboscan-518-Mode-3.deviceclass \
	Martin-Roboscan-812.deviceclass \
	SGM-Colorlab-250.deviceclass \
	SGM-Giotto-Spot-250.deviceclass \
	SGM-Giotto-Wash-400.deviceclass \
	SGM-Powerlight-1212D.deviceclass \
	SGM-Powerlight-612D.deviceclass \
	SGM-Powerlight-625D.deviceclass \
	SGM-Varismoke-DMX.deviceclass \
	SGM-Victory-250.deviceclass \
	SGM-Victory-II-250.deviceclass \
	SGM-Victory-II-Pro150.deviceclass \
	ShowTec-UP-1.deviceclass
