docsdir = $(datadir)/$(DOCUMENTS)/$(PACKAGE)
picsdir = $(docsdir)/pics

dist_docs_DATA = \
	advancedsceneeditor.html \
	busproperties.html \
	coding-convention.html \
	compiling.html \
	concept.html \
	deviceclasseditor.html \
	devicemanager.html \
	errata.html \
	faq.html \
	functionmanager.html \
	getting-started.html \
	glossary.html \
	index.html \
	mainwindow.html \
	settings.html

dist_pics_DATA = \
	pics/advancedsceneeditor.png \
	pics/busproperties.png \
	pics/dce-main.png \
	pics/devicemanager.png \
	pics/functionmanager.png \
	pics/mainwindow.png \
	pics/qlc-logo.jpg \
	pics/selectfunction.png \
	pics/settings.png
