docsdir = $(datadir)/$(DOCUMENTS)/$(PACKAGE)
picsdir = $(docsdir)/pics

dist_docs_DATA = \
	advancedsceneeditor.html \
	advancedsceneeditor-pic.html \
	busproperties.html \
	busproperties-pic.html \
	coding-convention.html \
	compiling.html \
	concept.html \
	console.html \
	console-pic.html \
	deviceclasseditor.html \
	deviceclasseditor-pic.html \
	devicemanager.html \
	devicemanager-pic.html \
	errata.html \
	faq.html \
	functionmanager.html \
	functionmanager-pic.html \
	getting-started.html \
	index.html \
	mainwindow.html \
	mainwindow-pic.html \
	settings.html \
	settings-pic.html

dist_pics_DATA = \
	pics/advancedsceneeditor.png \
	pics/busproperties.png \
	pics/console.png \
	pics/dce-main.png \
	pics/devicemanager.png \
	pics/functionmanager.png \
	pics/mainwindow.png \
	pics/monitor.png \
	pics/newdevice.png \
	pics/qlc-logo.jpg \
	pics/selectfunction.png \
	pics/settings.png
