fixturesdir = $(datadir)/$(FIXTURES)

dist_fixtures_DATA = \
	Elation-Color-Spot-150.qxf \
	Elation-Vision-250.qxf \
	Eurolite-LED-PAR56.qxf \
	Futurelight-AHS-150.qxf \
	Futurelight-CF-200.qxf \
	Futurelight-CY-200.qxf \
	Futurelight-CY-250.qxf \
	Futurelight-DJ-Color200.qxf \
	Futurelight-DJScan200.qxf \
	Futurelight-DJScan250.qxf \
	Futurelight-EVO-5.qxf \
	Futurelight-EVO-7.qxf \
	Futurelight-EYE-18.qxf \
	Futurelight-EYE-36.qxf \
	Futurelight-MCF-200.qxf \
	Futurelight-MH-440.qxf \
	Futurelight-MH-840.qxf \
	Futurelight-PCC-1200.qxf \
	Futurelight-PCC-250CMY.qxf \
	Futurelight-PCC-250.qxf \
	Futurelight-PFE-1200.qxf \
	Futurelight-PHS-150.qxf \
	Futurelight-PHS-200.qxf \
	Futurelight-PHS-220.qxf \
	Futurelight-PHS-250.qxf \
	Futurelight-PHS-700.qxf \
	Futurelight-PHW-250.qxf \
	Futurelight-PHW-700.qxf \
	Futurelight-PSC-1200.qxf \
	Futurelight-PSC-250.qxf \
	Futurelight-PSC-575.qxf \
	Futurelight-XF-200.qxf \
	GLP-Junior-Scan-1.qxf \
	GLP-Junior-Scan-2.qxf \
	GLP-PocketScan.qxf \
	JB-Lighting-Varyscan2.qxf \
	Lite-Works-ColorChanger.qxf \
	Martin-MAC250+.qxf \
	Martin-MiniMAC-Maestro.qxf \
	Martin-MiniMAC-Profile.qxf \
	Martin-MiniMAC-Wash.qxf \
	Martin-MX-10.qxf \
	Martin-MX-1.qxf \
	Martin-MX-4.qxf \
	Martin-Roboscan-518.qxf \
	Martin-Roboscan-812.qxf \
	SGM-Colorlab-250.qxf \
	SGM-Giotto-Spot-250.qxf \
	SGM-Giotto-Wash-400.qxf \
	SGM-Victory-250.qxf \
	SGM-Victory-II-250.qxf \
	SGM-Victory-II-Pro150.qxf
