# Icons for desktop menu
iconsdir = $(datadir)/pixmaps
dist_icons_DATA = \
	qlc-fixtureeditor.png \
	qlc.png

# Application icons
imagesdir = $(datadir)/$(PIXMAPS)
dist_images_DATA = \
	apply.png \
	attach.png \
	back.png \
	bus.png \
	button.png \
	chaser.png \
	clock.png \
	collection.png \
	color.png \
	configure.png \
	console.png \
	detach.png \
	down.png \
	efx.png \
	editclear.png \
	editcopy.png \
	editcut.png \
	editpaste.png \
	editdelete.png \
	edit_add.png \
	edit_remove.png \
	edit.png \
	exit.png \
	fileclose.png \
	filenew.png \
	fileopen.png \
	filesave.png \
	fixture.png \
	fonts.png \
	forward.png \
	frame.png \
	function.png \
	global.png \
	help.png \
	image.png \
	key_bindings.png \
	keyboard.png \
	label.png \
	monitor.png \
	panic.png \
	plugin.png \
	player_play.png \
	player_stop.png \
	qlc-big.png \
	qlc-fixtureeditor.png \
	qlc.png \
	scene.png \
	sequence.png \
	slider.png \
	undo.png \
	up.png \
	view_left_right.png \
	view_sidetree.png \
	virtualconsole.png \
	window_nofullscreen.png \
	wizard.png \
	xypad-point.png \
	xypad.png
